# engine

./: .gitignore  .gitmodules  .superepo.toml  .superrepo.toml  Cargo.nix  Cargo.toml  LICENSE.md  README.md  build.rs  flake.nix
.github/workflows/: rust.yml
engine/: Cargo.toml  build.rs
engine/proto/: engine.proto
engine/src/: lib.rs  main.rs
engine/src/client/: main.rs
engine/src/server/: main.rs
engine_core/: Cargo.toml  rustforge.toml
engine_core/src/: lib.rs
engine_core_build/: Cargo.toml  build.rs
enginelib/: Cargo.toml  LICENSE.md
enginelib/macros/: Cargo.toml
enginelib/macros/src/: lib.rs
enginelib/src/: api.rs  config.rs  event.rs  lib.rs  plugin.rs  task.rs
enginelib/src/events/: admin_auth_event.rs  cgrpc_event.rs  mod.rs  start_event.rs
enginelib/tests/: event_tests.rs
macros/: Cargo.toml
macros/src/: lib.rs
proto/: engine.proto
src/: api.rs  config.rs  event.rs  lib.rs  macros.rs  plugin.rs  prelude.rs  task.rs
src/events/: OnStartEvent.rs  admin_auth_event.rs  auth_event.rs  cgrpc_event.rs  mod.rs  start_event.rs
tests/: event_tests.rs
web/: .gitignore  contentlayer.config.js  drizzle.config.ts  package-lock.json  package.json  tsconfig.json
web/src/app/: fonts.ts  layout.tsx  not-found.tsx
web/src/app/(app)/: page.tsx
web/src/app/blog/: layout.tsx  page.tsx
web/src/app/blog/[...slug]/: page.tsx
web/src/components/: command-menu.tsx  main-nav.tsx  mdx-card.tsx  mdx-components.tsx  mobile-nav.tsx  site-footer.tsx  site-header.tsx
web/src/config/: site.ts
web/src/content/authors/: ge.mdx  styly.mdx
web/src/content/blog/: blog.mdx
web/src/lib/: utils.ts
web/src/server/db/: schema.ts
