[package]
name = "enginelib"
version = "0.2.0"
edition = "2024"
description = "A library for the GE engine allowing for modding and removing boilerplate."
license-file = "LICENSE.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros = { path = "./macros" }
bincode = "1.3.3"
directories = "5.0.1"
libloading = "0.8.6"
oxifs = "0.1.0"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = "0.3.18"
tracing-test = "0.2.5"
chrono = { version = "0.4.40", features = ["serde"] }
sled = "0.34.7"
tokio = { version = "1.44.2", features = ["full"] }
[build-dependencies]
vergen-gix = { version = "1.0.0", features = ["build", "cargo", "rustc"] }
[profile.release]
codegen-units = 1 # Make builds deterministic
[profile.dev]
codegen-units = 1 # Make builds deterministic
