[package]
name = "engine"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE.md"
description = "A Blazingly fast distributed task system"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
dev = []
[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.36", features = ["derive"] }
clap_complete = "4.5.47"
colored = "3.0.0"
# directories = "5.0.1"
druid = { git = "https://github.com/GrandEngineering/druid.git" }
enginelib = { git = "https://github.com/GrandEngineering/enginelib.git" }
# libloading = "0.8.6"
prost = "0.13.5"
serde = "1.0.219"
# serde = "1.0.219"
tokio = { features = ["rt-multi-thread"], version = "1.44.1" }
toml = "0.8.20"
# toml = "0.8.19"
tonic = "0.13"
tonic-reflection = "0.13"
[build-dependencies]
tonic-build = "0.13"
