[package]
name = "engine"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE.md"
description = "A Blazingly fast distributed task system"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
dev = []
[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.36", features = ["derive"] }
clap_complete = "4.5.47"
colored = "3.0.0"
# directories = "5.0.1"
druid = { git = "https://github.com/GrandEngineering/druid.git" }
enginelib = { git = "https://github.com/GrandEngineering/enginelib.git" }
# libloading = "0.8.6"
prost = "0.14"
serde = "1.0.219"
# serde = "1.0.219"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
toml = "0.8.20"
# toml = "0.8.19"
tonic = "0.14"
tonic-prost = "0.14.0"

tonic-reflection = "0.14"
[build-dependencies]
tonic-build = "0.14"
tonic-prost-build = "0.14"
