[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.13.1"
tokio = { features = ["rt-multi-thread"], version = "1.39.2" }
tonic = "0.12.2"
tonic-reflection = "0.12.2"
[build-dependencies]
tonic-build = "0.12.2"
