[package]
name = "server"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
dev = []
[dependencies]
bincode = "1.3.3"
directories = "5.0.1"
enginelib = { path = "../enginelib" }
libloading = "0.8.5"
prost = "0.13.1"
serde = "1.0.215"
sled = "0.34.7"
tokio = { features = ["rt-multi-thread"], version = "1.39.2" }
toml = "0.8.19"
tonic = "0.12.3"
tonic-reflection = "0.12.3"
[build-dependencies]
tonic-build = "0.12.3"
