[package]
name = "engine"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE.md"
description = "A Blazingly fast distributed task system"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
dev = []
[dependencies]
postcard = { version = "1.1.3", features = ["use-std"] }
clap = { version = "4.5.53", features = ["derive"] }
clap_complete = "4.5.61"
colored = "3.0.0"
# directories = "5.0.1"
druid = { git = "https://github.com/GrandEngineering/druid.git" }
enginelib = { path = "../enginelib" }
# libloading = "0.8.6"
prost = "0.14"
serde = "1.0.228"
# serde = "1.0.219"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
toml = "0.9.8"
# toml = "0.8.19"
tonic = "0.14"
tonic-prost = "0.14.2"

tonic-reflection = "0.14"
[build-dependencies]
tonic-build = "0.14"
tonic-prost-build = "0.14"
