[package]
name = "enginelib"
version = "0.2.0"
edition = "2024"
description = "A library for the GE engine allowing for modding and removing boilerplate."
license-file = "LICENSE.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros = { path = "./macros" }
directories = "6.0.0"
libloading = "0.9.0"
oxifs = "0.1.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
chrono = { version = "0.4.42", features = ["serde"] }
sled = "0.34.7"
tokio = { version = "1.48.0", features = ["full"] }
postcard = { version = "1.1.3", features = ["use-std"] }
[build-dependencies]
vergen-gix = { version = "1.0.9", features = ["build", "cargo", "rustc"] }
[profile.release]
codegen-units = 1 # Make builds deterministic
[profile.dev]
codegen-units = 1 # Make builds deterministic
[dev-dependencies]
tracing-test = "0.2.5"
